[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sia"
version = "0.1.0"
description = "SIA: Symbolic Interpretability for Anticipatory Deep Reinforcement Learning in Network Control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=1.0",
  "matplotlib>=3.8",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyvis>=0.3",
  "scipy>=1.10",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
